--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "pgSQLDataSource": "Server=38.242.137.90;Port=5432;Database=DevWebApp;User Id=imdev;Password=D3s4rr01l0;"
+    "pgSQLDataSource": "Server=38.242.137.90;Port=5432;Database=eac_dev;User Id=imdev;Password=D3s4rr01l0;"
   },
   "Logging": {
     "LogLevel": {
